# TERMGAME

./: .clinerules  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  INTEGRATION_TESTING.md  LICENSE  README.md  TEST_SUMMARY.md  TEST_SUMMARY_EXHAUSTIVE.md  alembic.ini  docker-compose.yml  documentation_update_summary.txt  fix_all_missions.py  fix_mission_ids.py  fix_mission_schemas.py  mission_completion_summary.txt  mission_report.py  package-lock.json  play.bat  play.ps1  play.py  play.sh  pyproject.toml  pytest.ini  reorganize_missions.py  validate_missions.py  validate_progress.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: a6502ad1902b_create_mission_tables.py
docker/: Dockerfile.termgame-ubuntu  Dockerfile.ubuntu-full  README.md  build-image.sh  build-images.ps1
docs/: ERROR_MESSAGES.md  MISSION_LIST_COLORS.md  WINDOWS_CONTAINERS.md  api-reference.md  architecture.md  mission-design.md
docs/testing/: integration-tests.md  test-report-2026-01-07.md
scenarios/: README.md
scenarios/linux/: README.md
scenarios/linux/automation/: compression-advanced.yml  compression-basics-beginner.yml  cron-advanced.yml  cron-basics-beginner.yml  practice-backup-automation.yml
scenarios/linux/basics/: command-help.yml  directory-management.yml  environment-basics.yml  file-operations.yml  file-viewing.yml  navigation.yml
scenarios/linux/disk-management/: disk-analysis-intermediate.yml  disk-basics-beginner.yml  practice-disk-optimization.yml
scenarios/linux/environment/: environment-basics-beginner.yml  environment-variables-advanced.yml  practice-environment-debugging.yml  shell-config-intermediate.yml
scenarios/linux/file-operations/: absolute-relative-paths.yml  advanced-find-techniques.yml  file-basics-beginner.yml  finding-files.yml  glob-patterns.yml
scenarios/linux/files/: file-permissions.yml  piping-redirection.yml  searching-files.yml  text-manipulation.yml
scenarios/linux/filesystem/: filesystem-basics-beginner.yml  filesystem-internals-advanced.yml  links-inodes-intermediate.yml
scenarios/linux/navigation/: command-line-mastery-advanced.yml  filesystem-navigation.yml  navigation-advanced-intermediate.yml  shell-arguments.yml
scenarios/linux/networking/: practice-log-parsing.yml  regex-basics-beginner.yml  regex-intermediate.yml  sed-basics-advanced.yml
scenarios/linux/processes/: disk-usage.yml  job-control-intermediate.yml  practice-process-troubleshooting.yml  process-basics-beginner.yml  process-basics.yml  process-management-advanced.yml  system-info.yml
scenarios/linux/remote-access/: practice-remote-admin.yml  scp-sftp-intermediate.yml  ssh-advanced.yml  ssh-basics-beginner.yml  ssh-keys-intermediate.yml
scenarios/linux/scripting/: shell-scripting-advanced.yml  shell-scripting-beginner.yml  shell-scripting-expert.yml  shell-scripting-intermediate.yml  shell-scripting-master.yml
scenarios/linux/text-processing/: advanced-text-processing.yml  command-basics-beginner.yml  file-permissions.yml  io-redirection.yml  pipes-filters.yml  practice-log-analysis.yml
scenarios/linux/week10/: compression-advanced.yml  compression-basics-beginner.yml  cron-advanced.yml  cron-basics-beginner.yml  practice-backup-automation.yml
scenarios/linux/week11/: shell-scripting-advanced.yml  shell-scripting-beginner.yml  shell-scripting-expert.yml  shell-scripting-intermediate.yml  shell-scripting-master.yml
scenarios/linux/week13/: practice-log-parsing.yml  regex-basics-beginner.yml  regex-intermediate.yml  sed-basics-advanced.yml
scenarios/linux/week14/: practice-remote-admin.yml  scp-sftp-intermediate.yml  ssh-advanced.yml  ssh-basics-beginner.yml  ssh-keys-intermediate.yml
scenarios/linux/week2/: command-line-mastery-advanced.yml  filesystem-navigation.yml  navigation-advanced-intermediate.yml  shell-arguments.yml
scenarios/linux/week3/: absolute-relative-paths.yml  advanced-find-techniques.yml  file-basics-beginner.yml  finding-files.yml  glob-patterns.yml
scenarios/linux/week4/: advanced-text-processing.yml  command-basics-beginner.yml  file-permissions.yml  io-redirection.yml  pipes-filters.yml  practice-log-analysis.yml
scenarios/linux/week5/: environment-basics-beginner.yml  environment-variables-advanced.yml  practice-environment-debugging.yml  shell-config-intermediate.yml
scenarios/linux/week6/: filesystem-basics-beginner.yml  filesystem-internals-advanced.yml  links-inodes-intermediate.yml
scenarios/linux/week7/: disk-analysis-intermediate.yml  disk-basics-beginner.yml  practice-disk-optimization.yml
scenarios/linux/week9/: job-control-intermediate.yml  practice-process-troubleshooting.yml  process-basics-beginner.yml  process-management-advanced.yml
scenarios/powershell/backup/: backup-basics.yml  copy-backup.yml  disaster-recovery.yml  windows-backup.yml
scenarios/powershell/basics/: aliases.yml  cmdlet-syntax.yml  get-help.yml  hello-powershell.yml  navigation.yml  tab-completion.yml
scenarios/powershell/cloud/: azure-intro.yml  azure-resources.yml  azure-vms.yml  hybrid-cloud.yml
scenarios/powershell/cmdlets/: advanced-parameters.yml  cmdlet-best-practices.yml  cmdlet-discovery.yml  cmdlet-parameters.yml  common-cmdlets.yml
scenarios/test/: simple-mission.yml
scripts/: README.md  setup-integration-tests.bat  setup-integration-tests.sh  setup_dev.ps1  setup_dev.sh  test-docker-integration.bat  test-docker-integration.sh  test-docker.bat  test-docker.sh  validate_scenarios.py
src/termgame/: __init__.py  __main__.py  cli.py  cli_utils.py  config.py  interactive.py  logging_config.py
tests/: README.md  RUN_POWERSHELL_TESTS.md  __init__.py  conftest.py
tests/integration/: test_mission_engine_docker.py
tests/unit/: test_models.py  test_powershell_content_quality.py  test_powershell_mission_schema.py
(+79 files in other folders)
