[project]
name = "termgame"
version = "0.1.0"
description = "Terminal-based CLI training platform for Linux, Cisco IOS, and PowerShell skills"
authors = [
    {name = "Redji Jean Baptiste", email = "jean0319@algonquinlive.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["cli", "training", "terminal", "gamification", "linux", "cisco", "powershell"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: System :: Shells",
    "Environment :: Console",
]

dependencies = [
    "textual>=0.84.0",           # TUI framework
    "typer>=0.12.0",             # CLI framework
    "pydantic>=2.9.0",           # Data validation
    "pydantic-settings>=2.5.0",  # Settings management
    "pyyaml>=6.0.1",             # YAML parsing for scenarios
    "docker>=7.1.0",             # Docker SDK
    "sqlalchemy>=2.0.35",        # Database ORM
    "alembic>=1.13.0",           # Database migrations
    "rich>=13.8.0",              # Rich text formatting
    "python-dotenv>=1.0.1",      # Environment variable management
    "click>=8.1.7",              # CLI utilities (typer dependency)
    "prompt-toolkit>=3.0.0",     # Advanced input with autocomplete
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.12",
    "types-docker>=7.1.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.scripts]
termgame = "termgame.cli:app"

[project.urls]
Homepage = "https://github.com/RedjiJB/TERMGAME"
Repository = "https://github.com/RedjiJB/TERMGAME"
Documentation = "https://github.com/RedjiJB/TERMGAME/docs"
"Bug Tracker" = "https://github.com/RedjiJB/TERMGAME/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/termgame"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert
    "ARG",     # Unused arguments
    "PLR2004", # Magic values in comparisons
    "ANN",     # Missing type annotations (relaxed for tests)
]
"scripts/**/*.py" = [
    "T201",    # print found (allowed in scripts)
    "PTH",     # use pathlib (not required for simple scripts)
    "TRY300",  # else block after return (common pattern in validation)
]
# Utility scripts at root level
"fix_*.py" = [
    "T201",    # print found (allowed in utility scripts)
    "PTH",     # use pathlib (not required for simple scripts)
    "TRY300",  # else block after return (common pattern in validation)
    "ANN",     # Missing type annotations (not required for utility scripts)
    "PLR",     # Pylint rules (complexity checks relaxed for scripts)
    "SIM",     # Simplify rules (relaxed for quick scripts)
]
"reorganize_*.py" = [
    "T201",    # print found (allowed in utility scripts)
    "PTH",     # use pathlib (not required for simple scripts)
    "TRY300",  # else block after return (common pattern in validation)
    "ANN",     # Missing type annotations (not required for utility scripts)
]
"validate_*.py" = [
    "T201",    # print found (allowed in utility scripts)
    "PTH",     # use pathlib (not required for simple scripts)
    "ANN",     # Missing type annotations (not required for utility scripts)
    "S603",    # subprocess call is intentional
    "F841",    # Unused variables in validation scripts
    "PLR1722",  # exit() acceptable in utility scripts
]
"mission_report.py" = [
    "T201",    # print found (allowed in utility scripts)
    "ANN",     # Missing type annotations (not required for utility scripts)
    "E501",    # Line length relaxed for utility scripts
]
"play.py" = [
    "T201",    # print found (allowed in utility scripts)
    "ANN",     # Missing type annotations (not required for utility scripts)
    "S603",    # subprocess call is intentional
    "F841",    # Unused variable (temporary development script)
]
"src/**/*stub*.py" = [
    "ARG",     # Unused arguments (expected in stubs)
]
"src/termgame/matchers/base.py" = [
    "ANN401",  # Any is acceptable in protocol definitions
]
"src/termgame/matchers/implementations.py" = [
    "ANN401",  # Any required by Matcher protocol
]
"src/termgame/engine/mission_engine.py" = [
    "PLR0912",  # Complex validation logic requires many branches
    "PLR0913",  # Many arguments needed for mission engine initialization
    "PLR0915",  # Complex mission execution requires many statements
    "TRY301",  # Inline raise is clearer for validation errors
    "TRY400",  # logging.error with exc_info is intentional for stack traces
    "S110",  # Best-effort cleanup intentionally swallows exceptions
]
"src/termgame/runtimes/docker_runtime.py" = [
    "S101",  # Assert used to verify Docker SDK contract
    "S110",  # Best-effort cleanup intentionally swallows exceptions
    "TRY300",  # Direct return in try block clearer than else
    "TRY400",  # logging.error with exc_info intentional for context
    "ANN401",  # Any type needed for flexible config dict
    "G004",  # F-strings in logging acceptable for performance
    "G201",  # logging.error with exc_info is clear and intentional
    "TRY003",  # Long error messages provide helpful context
    "EM101",  # Exception messages can be literals for clarity
    "EM102",  # Exception messages with f-strings are acceptable
    "B904",  # Re-raising with context handled elsewhere
    "RUF100",  # Unused noqa from previous configuration
]
"src/termgame/runtimes/factory.py" = [
    "PLC0415",  # Lazy import to avoid circular dependencies
    "ANN401",  # Any type needed for flexible config dict
]
"src/termgame/runtimes/exceptions.py" = [
    "A001",  # Intentionally shadowing RuntimeError/ConnectionError with custom versions
]
"src/termgame/tui/app.py" = [
    "RUF012",  # Textual uses mutable class attributes intentionally
    "ANN401",  # Any allowed for *args/**kwargs in widgets
]
"src/termgame/cli.py" = [
    "PLC0415",  # Lazy import of TUI to avoid loading Textual unless needed
    "E501",    # Long line for clear help text
]
"src/termgame/tui/screens.py" = [
    "RUF012",  # Textual uses mutable class attributes intentionally
    "ANN401",  # Any allowed for *args/**kwargs in widgets
]
"src/termgame/tui/engine_wrapper.py" = [
    "TRY300",  # Direct return in try block is clearer than else block
    "PLW0603",  # Global singleton pattern is intentional
]
"src/termgame/interactive.py" = [
    "PLC0415",  # Lazy imports to avoid loading heavy modules unless needed
    "TRY400",  # logging.error with exc_info intentional for stack traces
    "G004",  # F-strings in logging acceptable for performance
    "G201",  # logging.error with exc_info is clear and intentional
    "E501",  # Long lines acceptable for clear help text
    "F841",  # Unused variable in development code
    "T201",  # print statements used for CLI output
    "DTZ006",  # Timezone not needed for display timestamps
]
"src/termgame/logging_config.py" = [
    "G004",  # F-strings in logging acceptable for configuration
]
"src/termgame/ui/*.py" = [
    "SIM102",  # Nested ifs are clearer for complex conditions
    "SIM108",  # If-else blocks are more readable than ternary
    "ARG002",  # Unused arguments required by interface/protocol
    "PLR2004",  # Magic values acceptable in UI code
]

[[tool.mypy.overrides]]
module = "termgame.ui.*"
disallow_untyped_defs = false
disallow_subclassing_any = false

[tool.ruff.lint.isort]
known-first-party = ["termgame"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=termgame",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
